[package]
name = "zero2prod_rust"
version = "0.1.0"
authors = ["Eidmantas Slenys <eidmantas.slenys@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod_rust"

[dependencies]
actix-web = "4"
cargo-expand = "1.0.79"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"